--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "dist/server/node-build.mjs",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "dist/server/node-build.mjs"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "dist/server/node-build.mjs"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
