Update Vercel configuration with explicit build settings for SPA deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "npm run build:client",
+  "outputDirectory": "dist/spa",
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
